# auto-wrap

./: Cargo.toml  README.md
src/: lib.rs
tests/: wrap_tests.rs
